<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_Ctrl" Id="{83419c99-e664-47be-ab26-3f06ae04af5b}">
    <Declaration><![CDATA[TYPE ST_Ctrl :
STRUCT
	Init: BOOL;
	Execute: BOOL;
	Reset: BOOL;
	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>