<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_openPDF" Id="{54ea8de0-3a55-4f67-806c-b9d9bb40f1c3}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_openPDF
VAR_INPUT
	ctrl: ST_Ctrl;
	dateiname:STRING:='C:\Temp\Beispielprojekt.pdf';
END_VAR

VAR_OUTPUT
	status: ST_Status;
END_VAR

VAR
	fbntstartprozess: NT_StartProcess;
	nstep: INT;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE nstep OF
0: //init
	status.InitOk:=TRUE;
	
	IF status.InitOk THEN
		nstep:=1;
	END_IF
	
1: //idle
	
	IF ctrl.Execute THEN
		status.Done:=FALSE;
		status.Busy:=TRUE;
		nstep:=2;
	END_IF
	
2: //PDF öffnen
	
	fbntstartprozess(
		NETID:='' , 
		(*64 Bit*)
		//PATHSTR:='C:\Program Files (x86)\Adobe\Acrobat Reader DC\Reader\AcroRd32.exe' , //Pfad des PDF Viewers
		//DIRNAME:='C:\Program Files (x86)\' , 											//Verzeichnis des Viewers
		(**)
		(*32 Bit*)
		PATHSTR:='C:\Program Files\Adobe\Acrobat Reader DC\Reader\AcroRd32.exe' , //Pfad des PDF Viewers
		DIRNAME:='C:\Program Files\' , 											//Verzeichnis des Viewers
		(**)
		COMNDLINE:=dateiname ,  												//zu öffnende Datei
		START:= TRUE, 
		TMOUT:= , 																//Default wert
		BUSY=> , 
		ERR=> , 
		ERRID=> );

	// Abfrage ob Fertig und kein Fehler
	IF NOT fbntstartprozess.BUSY THEN
		status.Busy:=FALSE;
		IF NOT fbntstartprozess.ERR THEN
			nstep:=3;
			fbntstartprozess(START:=FALSE);
		ELSE
			nstep:=99; //Fehler
		END_IF
		
	END_IF	
	
	
3: //fertig
	status.Busy:=FALSE;
	status.Done:=TRUE;
	IF NOT ctrl.Execute THEN
		nstep:=1;
	END_IF

8: //reset
	status.stError.Err:=FALSE;
	fbntstartprozess(START:=FALSE);
	nstep:=0;

99: //Fehler
	status.stError.Err:=TRUE;
	status.stError.ID:=fbntstartprozess.ERRID;
	status.Busy:=FALSE;
	
	IF ctrl.Reset THEN
		nstep:=8;
	END_IF
	
END_CASE





]]></ST>
    </Implementation>
    <LineIds Name="FB_openPDF">
      <LineId Id="10" Count="74" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>